--- a/_teaching/teaching.html
+++ b/_teaching/teaching.html
@@ -1,7 +1,7 @@
-
-author_profile: true
 ---
-
-{% include base_path %}
-
-{% for post in site.teaching reversed %}
+title: "Coming soon"
+collection: teaching
+type: "Undergraduate course"
+permalink: /teaching/teaching
+---
+Coming soon.
