--- a/_teaching/teaching.html
+++ b/_teaching/teaching.html
@@ -1,7 +1,5 @@
 ---
-title: "Coming soon"
 collection: teaching
-type: "Undergraduate course"
 permalink: /teaching/teaching
 ---
-Coming soon.
+Coming soon
