--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,12 +1,10 @@
 ---
-layout: archive
+permalink: /teaching/
 title: "Teaching"
 permalink: /teaching/
 author_profile: true
+
 ---
 
-{% include base_path %}
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+Coming Soon
